<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_primary10"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/calistoga"
        android:text="@string/easyed"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/Lgmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="208dp"
        android:background="@color/material_dynamic_primary40"
        android:ems="10"
        android:hint="@string/enter_gmail"
        android:inputType="textEmailAddress"
        android:textColorHint="#BBDEFB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Lname"
        app:layout_constraintVertical_bias="0.088"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Lpassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="240dp"
        android:background="@color/material_dynamic_primary40"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColorHint="#BBDEFB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Lgmail"
        app:layout_constraintVertical_bias="0.219"
        android:autofillHints="" />

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Lpassword"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_an_account_sign_in"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/signupbtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/signupbtn"
        app:layout_constraintTop_toBottomOf="@+id/signupbtn"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/Lname"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@color/material_dynamic_primary40"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:textColorHint="#BBDEFB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.147"
        android:autofillHints="" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupbtn"
        app:layout_constraintVertical_bias="0.301" />

</androidx.constraintlayout.widget.ConstraintLayout>